# open-llm-translator

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  env.example  pyproject.toml
.github/workflows/: docker-image.yml
app/: config.py  main.py
app/routers/translate/: __init__.py  models.py  translators.py
app/utils/: module_loading.py
requirements/: base.txt
