[project]
name = "open-llm-translator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deepl>=1.28.0",
    "fastapi[standard]>=0.129.0",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "ollama>=0.6.1",
    "socksio>=1.0.0",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
indent-width = 4
exclude = [
	"site-packages",
	".venv",
	"*.md",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["B904"]
#extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
docstring-code-format = false

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
		\.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | migrations
  | frontend
  | requirements
  | static
  | staticsource
  | templates
  | build
  | dist
  | upload
)/
'''

